err/django-snapshot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_snapshot-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/snapshot'...
Listing './lib/python3.5/site-packages/snapshot/management'...
Listing './lib/python3.5/site-packages/snapshot/management/commands'...
Compiling './lib/python3.5/site-packages/snapshot/management/commands/snap.py'...
***   File "./lib/python3.5/site-packages/snapshot/management/commands/snap.py", line 53
    print '%d: %s' % (i, snapshots[i])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/snapshot/utils.py'...
***   File "./lib/python3.5/site-packages/snapshot/utils.py", line 8
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
